tests/sumo/errors/routes/disconnected_off_customTeleport0/errors.sumo.meso
Warning: Teleporting vehicle '0'; waited too long (disconnected), from edge 'beg':4 to edge 'end':0, time=18.99.
